# paste_keyboard

./: .gitignore  PasteKeyboard.spec  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: cicd.yml  release-windows.yml
docs/: build.en.md  build.md  enduser.en.md  enduser.md  usage.en.md  usage.md
scripts/: build.ps1  build_docs_pdf.py  capture_screenshots.ps1  screenshot_app.py
src/paste_keyboard/: __init__.py  config.py  gui.py  hotkeys.py  i18n.py  layouts.py  typing.py  win32.py
tests/: test_config.py  test_gui.py  test_layouts.py  test_main.py
tests/_tmp/tmp-60ced1ecdf604a59a642e1ba70112ff1/custom/: settings.json
tests/_tmp/tmp-67cf857d19a14faead0acda91f00fc50/custom/: settings.json
tests/_tmp/tmp-99e04aa0688343f69c860e72f17f30c6/nested/: test-settings-save.json
